# efl_helloworld

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  main.c  modest.edc  modest.edj
